# reading-code

./: CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
1. Standard Python/Classes/: classes.py
1. Standard Python/Dictionaries/: main.py
1. Standard Python/Lists & Tuples/: main.py
3. Third Party Library Imports/Web Development/WSGI/API/Falcon/: README.md  main.py
3. Third Party Library Imports/Web Development/WSGI/API/Falcon/app/: views.py
