[tool.poetry]
name = "pythonista_cafe_reading_code"
version = "0.1.0"
description = "This is a general \"how to read code package\""
authors = ["Jordan Gregory <gregory.jordan.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
falcon = "^1.4"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
